Updates from Overleaf

--- a/biblio.bib
+++ b/biblio.bib
@@ -90,18 +90,22 @@
   publisher={MDPI}
 }
 
-@article{lanillos2021active,
-  title={Active inference in robotics and artificial agents: Survey and challenges},
-  author={Lanillos, Pablo and Meo, Cristian and Pezzato, Corrado and Meera, Ajith Anil and Baioumy, Mohamed and Ohata, Wataru and Tschantz, Alexander and Millidge, Beren and Wisse, Martijn and Buckley, Christopher L and others},
-  journal={arXiv preprint arXiv:2112.01871},
-  year={2021}
+@misc{lanillos2021active,
+      title={Active Inference in Robotics and Artificial Agents: Survey and Challenges}, 
+      author={Pablo Lanillos and Cristian Meo and Corrado Pezzato and Ajith Anil Meera and Mohamed Baioumy and Wataru Ohata and Alexander Tschantz and Beren Millidge and Martijn Wisse and Christopher L. Buckley and Jun Tani},
+      year={2021},
+      eprint={2112.01871},
+      archivePrefix={arXiv},
+      primaryClass={cs.RO}
 }
 
-@article{tschantz2020reinforcement,
-  title={Reinforcement learning through active inference},
-  author={Tschantz, Alexander and Millidge, Beren and Seth, Anil K and Buckley, Christopher L},
-  journal={arXiv preprint arXiv:2002.12636},
-  year={2020}
+@misc{tschantz2020reinforcement,
+      title={Reinforcement Learning through Active Inference}, 
+      author={Alexander Tschantz and Beren Millidge and Anil K. Seth and Christopher L. Buckley},
+      year={2020},
+      eprint={2002.12636},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG}
 }
 
 @article{da2022active,
