--- a/sample-authordraft.tex
+++ b/sample-authordraft.tex
@@ -259,7 +259,7 @@ affects the participant's behavior and helping them meet their objective.
 %%
 %% Keywords. The author(s) should pick words that accurately describe
 %% the work being presented. Separate the keywords with commas.
-\keywords{}　% TODO: keywords
+\keywords{nudging, active inference, model-based} % TODO: keywords
 
 %% A "teaser" image appears between the author and affiliation
 %% information and the body of the document, and typically spans the
@@ -288,23 +288,23 @@ are high \cite{daly2002barriers}. In this work, we explore how such personalized
 
 To personalize the incentives (i.e. nudging), we use the active inference framework, which allows us to
 balance
-learning about how the policy concerning the incentives affects the participant’s behavior and helping them meet
+learning about how the policy concerning the incentives affects the participant’s behaviour and helping them meet
 their objective. Active inference is a mathematical framework that originated in computational neuroscience as a
 theory of how the brain implements action, perception, and learning. It has recently been shown to be a promising
-approach to the problems of state-estimation and control under uncertainty, as well as a foundation for the
-construction of goal-driven behaviors in robotics and artificial agents in general. In this work, we would like to
+approach to the problems of state estimation and control under uncertainty, as well as a foundation for the
+construction of goal-driven behaviours in robotics and artificial agents in general. In this work, we would like to
 show that it is also a promising approach to the problem of designing personalized nudging interventions.
 
 After presenting the related works, we first give a vision of the computational problem at stake, and then
-provide a concrete case of application where we personalize nudging through small　monetary　incentives　spread over the day to improve　adherence to a daily step goal in healthy participants.
+provide a concrete case of an application where we personalize nudging through small monetary incentives spread over the day to improve adherence to a daily step goal in healthy participants.
 
 
 \section{Related Work}
 
-There is a growing body of research on the use of personalized nudging to promote healthy behaviors, including exercise.
-Personalized nudging refers to the use of behavioral insights to design interventions that are tailored to an individual’s
+There is a growing body of research on the use of personalized nudging to promote healthy behaviours, including exercise.
+Personalized nudging refers to the use of behavioural insights to design interventions that are tailored to an individual’s
 specific needs and preferences\cite{mills_2022}. This approach has been shown to be effective in promoting a variety
-of healthy behaviors, including physical activity\cite{forberger2019nudging}.
+of healthy behaviours, including physical activity\cite{forberger2019nudging}.
 
 One study found that personalized nudging can be used to promote physical activity among older
 adults\cite{room2017interventions}. The study used a two-component framework for personalization, which involved
@@ -343,12 +343,12 @@ In summary, personalized nudging using active inference could be a powerful tool
 
 \section{Results}
 
-\begin{figure}[h]
-  \centering
-  \includegraphics[width=\linewidth]{}
-  \caption{}
-  \Description{}
-\end{figure}
+% \begin{figure}[h]
+%   \centering
+%   \includegraphics[width=\linewidth]{}
+%   \caption{}
+%   \Description{}
+% \end{figure}
 
 \section{Discussion}
 
@@ -368,7 +368,7 @@ This work was supported by the Engineering and Physical Sciences Research Counci
 %% The next two lines define the bibliography style to be used, and
 %% the bibliography file.
 \bibliographystyle{ACM-Reference-Format}
-\bibliography{sample-base}
+\bibliography{biblio}
 
 %%
 %% If your work has an appendix, this is the place to put it.
